OSTJ-194 Prevent layout from shifting when Kohderyhmä is (de)selected

--- a/organisaatio-ui/src/components/Sivut/OsoitteetSivu/SearchView.module.css
+++ b/organisaatio-ui/src/components/Sivut/OsoitteetSivu/SearchView.module.css
@@ -63,6 +63,7 @@
     border-radius: 3px;
     background: #fff;
     box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.17);
+    border: 2px solid var(--color-neutral-white);
 }
 
 .Kohderyhma.Selected {
